handel updata method
